Updated code and add few more test cases

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,98 +4,62 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>tests.HomepageAndGeneralElementsTest</td>
+<td>tests.ProductDiscoveryAndBrowsingTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>searchWithPartialNameAndVerifyAutocomplete</td>
+<td>addProductToCompareFromPDP</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>searchWithLeadingTrailingSpaces</td>
+<td>validateEmptyComparePage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateSortSearchResults</td>
+<td>validateComparePageElements</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>searchForFullProductName</td>
+<td>verifySortByProductName</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifySubMenuNavigationLink</td>
+<td>addSameProductToCompareTwice</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyHoverDisplaysSubMenu</td>
+<td>verifyFilterThenSort</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyMainNavigationLink</td>
+<td>verifySortByPrice</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>searchWithEmptyField</td>
+<td>verifySingleFilter</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>searchWithProductSku</td>
+<td>validateComparePageWithTwoItems</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>searchForNonExistentProduct</td>
+<td>verifyPaginationUpdatesAfterFilteringOnSubCategory</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateShowPerPageLimiter</td>
+<td>verifyMultipleFilters</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>searchWithMixedCase</td>
+<td>removeItemFromComparePage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>searchForGenericCategory</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyLogoNavigatesToHomepage</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>validateSearchBarIsAlwaysPresent</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>validateListViewAndGridView</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>searchWithSpecialCharacters</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>validateAddToCompare</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyGuestUserAuthLinks</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyAllFooterLinks</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>searchAfterLogin</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>validateSearchResultsPageElements</td>
+<td>verifyClearAllFilters</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
